# p2p

./: Android.mk  CMakeLists.txt  android.cmake  build.android.sh  build.bat  build.hi.sh  build.linux.sh  todo.txt
build.android/: CMakeCache.txt  Makefile  cmake_install.cmake
build.android/client/: Makefile  cmake_install.cmake
build.android/common/: Makefile  cmake_install.cmake
build.android/server/: Makefile  cmake_install.cmake
build.android/util/: Makefile  cmake_install.cmake
client/: CMakeLists.txt  build.bat  client.cpp
common/: CMakeLists.txt  candidate.h  client-state-connected.cpp  client-state-connecting.cpp  client-state-disconnecting.cpp  client-state-login.cpp  client-state-loginning.cpp  client-state-logout.cpp  client-state-logouting.cpp  client-state.h  common-config.cmake  event-thread.h  listener.h  log.h  message.cpp  message.h  network.h  safe-queue.h  servant-agent.cpp  servant-agent.h  servant.cpp  servant.h  session.h  stun-resolver.cpp  stun-resolver.h  stun.cpp  stun.h  thread.h  timer.h  transceiver.cpp  transceiver.h  udp.cpp  udp.h
server/: CMakeLists.txt  server.cpp
test/: test.bat  test1.bat  test2.bat
util/: CMakeLists.txt  dummy.cpp  event-args.h  event-thread.h  log.h  safe-queue.h  timer.h  util-config.cmake
